--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_all_albums">AllAlbumsActivity</string>
     <string name="title_activity_album_tracks">AlbumTracksActivity</string>
+    <string name="title_activity_playing">PlayingActivity</string>
 </resources>
