--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_all_albums">AllAlbumsActivity</string>
     <string name="title_activity_album_tracks">AlbumTracksActivity</string>
     <string name="title_activity_playing">PlayingActivity</string>
+    <string name="title_activity_flash_back">FlashBackActivity</string>
 </resources>
