--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_playing">PlayingActivity</string>
     <string name="title_activity_flash_back">FlashBackActivity</string>
     <string name="title_activity_view_playlist">ViewPlaylistActivity</string>
+    <string name="title_activity_vibe_mode_preparation">VibeModePreparationActivity</string>
 </resources>
